# aharo-tetris

./: README.md  meson.build
data/: com.github.aharotias2.AharoTetris.desktop  com.github.aharotias2.ahoris.desktop  gresources.xml
src/: aharo-tetris.vala  ahoris.vala  labelbuilder.vala  stopwatch.vala
